更新库和实现

--- a/proj/tsconfig.json
+++ b/proj/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "module": "amd",
     "sourceMap": true,
+    "outDir": "../docs/js",
     "typeRoots": [
       "typings/"
     ]
